# Fn

./: CMakeLists.txt  Makefile  POSTMORTEM.md  README.md  TODO.org  build.zig  check3.fn  check4.fn  config.h.in  design-notes.html  design-notes.org  design.org  examples.fn  fn-manual.html  fn-manual.org  fn-manual.tex  garbage-check.fn  implementation-progress.org  lang-spec.html  lang-spec.org  lang-spec.tex  nstest.fn  spec.org  spec0.org  stacks.fn  style.css  test.fn  test2.fn  test3.fn  xf.fn
.github/workflows/: test-linux.yml  test.yml
auto/: fn-manual.el  lang-spec.el
docs/: spec.org
emacs/: fn-mode.el
include/: allocator.hpp  array.hpp  ast.hpp  base.hpp  bytes.hpp  compile.hpp  compile2.hpp  expand.hpp  expander.hpp  generator.hpp  init.hpp  interpret.hpp  istate.hpp  llir.hpp  log.hpp  memory.hpp  namespace.hpp  obj.hpp  object_pool.hpp  parse.hpp  scan.hpp  table.hpp  values.hpp  vm.hpp  vm_handle.hpp
include/ffi/: builtin.hpp  fn_handle.hpp  fnffi.h  interpreter_handle.hpp
old-specs/: README  lang-spec-2.org  lang-spec.org  old-readme.md
old-specs/design/: architecture.html  architecture.org  style.org
pkg/fn.builtin/: __init.fn  list.fn  quasiquote.fn  special.fn
src/: CMakeLists.txt  alloc.cpp  alloc.hpp  allocator.cpp  allocator.hpp  api.cpp  api.hpp  array.hpp  base.cpp  base.hpp  builtin.cpp  builtin.hpp  bytes.cpp  bytes.hpp  compile.cpp  compile.hpp  compile2.cpp  compile2.hpp  devtest.zig  expand.cpp  expand.hpp  gc.cpp  gc.hpp  init.cpp  interpret.cpp  interpret.hpp  istate.cpp  istate.hpp  llir.cpp  llir.hpp  log.cpp  main.cpp  main.zig  memory.cpp  namespace.cpp  namespace.hpp  obj.cpp  obj.hpp  object_pool.hpp  parse.cpp  (+13 more)
src/ffi/: builtin.cpp  fn_handle.cpp  fn_handle.hpp  fnffi.cpp  interpreter_handle.cpp
test/: CMakeLists.txt  bytes.test.cpp  interpret.test.cpp  parse.test.cpp  scan.test.cpp
